fixed vertical scrollbar

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,6 +9,7 @@ body {
 
 .wrapper {
     width: 100vw;
+    max-width: 100%;
     display: flex;
     flex-flow: column nowrap;
     align-content: center;
